# zephcraft

./: .gitignore  Cargo.toml  README.md
.claude/: durability-repair-jobs-progress.md  feature-progress.md
.github/workflows/: deploy-website.yml
apps/counter-wasm/: Cargo.toml
apps/counter-wasm/src/: lib.rs
apps/economy-egress-wasm/: Cargo.toml
apps/economy-egress-wasm/src/: lib.rs
apps/guestbook-wasm/: Cargo.toml
apps/guestbook-wasm/src/: lib.rs
apps/ledger-wasm/: Cargo.toml
apps/ledger-wasm/src/: lib.rs
apps/registry-wasm/: Cargo.toml
apps/registry-wasm/src/: lib.rs
apps/reward-wasm/: Cargo.toml
apps/reward-wasm/src/: lib.rs
apps/token-wasm/: Cargo.toml
apps/token-wasm/src/: lib.rs
apps/tracker/: Cargo.toml
apps/tracker/src/: dashboard.rs  main.rs
crates/cheque/: Cargo.toml
crates/cheque/src/: lib.rs
crates/cipher/: Cargo.toml
crates/cipher/src/: lib.rs
crates/com/: Cargo.toml  registry.wasm
crates/com/src/: attest.rs  attestation.rs  capability.rs  coordinate.rs  craft.rs  gov.rs  invoke.rs  lib.rs  registry.rs  sequencer.rs  transition.rs  verification.rs
crates/com/tests/: coordinate.rs  craft_backend.rs  feed.rs  invoke.rs  registry_live.rs
crates/core/: Cargo.toml
crates/core/src/: hlc.rs  lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/dht/: Cargo.toml
crates/dht/src/: lib.rs  node.rs  proto.rs  record.rs  table.rs
crates/economy-egress/: Cargo.toml
crates/economy-egress/src/: lib.rs  subscription.rs
crates/erasure/: Cargo.toml
crates/erasure/src/: gf.rs  lib.rs  vtags.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: lib.rs
crates/membership/: Cargo.toml
crates/membership/src/: lib.rs
crates/noded/: Cargo.toml  economy-egress.wasm  ledger.wasm  reward.wasm  token.wasm
crates/noded/src/: account.rs  anchor.rs  appreg.rs  attest.rs  board.rs  cheque.rs  committee.rs  control.rs  econ_store.rs  economy_egress.rs  epoch.rs  epoch_committee.rs  genesis.rs  governance.rs  headreg.rs  ledger.rs  main.rs  manifest.rs  peers.rs  programreg.rs  progreg.rs  quorum_source.rs  record_attest.rs  record_chain.rs  registry_heads.rs  registry_net.rs  repair.rs  sequence.rs  settlement.rs  settlement_service.rs  shard_root.rs
crates/noded/tests/: two_workers.rs
crates/reward/: Cargo.toml
crates/reward/src/: lib.rs
crates/routing/: Cargo.toml
crates/routing/src/: composite.rs  dht_routing.rs  lib.rs  records.rs  registry.rs  server.rs
crates/routing/tests/: tracker.rs
crates/sched/: Cargo.toml
crates/sched/src/: lib.rs
crates/sql/: Cargo.toml
crates/sql/src/: db.rs  fetch.rs  gen.rs  lib.rs  net.rs  pager.rs  store.rs  vfs.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/store/tests/: store.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
deploy/: README.md  gate.sh  zeph.service
docs/: CRAFTOBJ_DESIGN.md  DURABILITY_DESIGN.md  ECONOMIC_LAYER_DESIGN.md  ECONOMY_PROGRAMS_DESIGN.md  SQL_REGISTRY_DESIGN.md  STATE_AND_ROADMAP.md  TOKEN_LEDGER_BUILD.md  TRANSFER_PLANE_V2.md  VISION.md  ZEPHCRAFT.md  ZEPHCRAFT_NETWORK.md  ZEPH_POSITIONING.md  craftec_technical_foundation.md
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: craftsql_dst.rs  smoke.rs  transfer_plane.rs
website/: index.html  vercel.json
webui/: index.html  tracker.html
