[package]
name = "zeph-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
zeph-core.workspace = true
zeph-routing.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
rand.workspace = true
zeph-crypto.workspace = true
zeph-store.workspace = true
zeph-transport.workspace = true
zeph-obj.workspace = true
zeph-sql.workspace = true
