[package]
name = "zeph-cipher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zeph-core.workspace = true
blake3.workspace = true
rand.workspace = true
thiserror.workspace = true
chacha20poly1305 = "0.10"
umbral-pre = { version = "0.11", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
postcard.workspace = true
