[package]
name = "zeph-economy-egress"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# `#![no_std]` + alloc so the SAME crate compiles for the `apps/economy-egress-wasm` protocol program
# (wasm32) and native. Depends on `zeph-token` for the shared account-chain op vocabulary.
[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
zeph-token = { workspace = true }
