[package]
name = "zeph-economy-egress"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# `#![no_std]` + alloc so the SAME crate compiles for the `apps/economy-egress-wasm` protocol program
# (wasm32) and native. Wraps `zeph-reward` (the egress valuation math): this crate IS the economy-egress
# program behind the anchor, so it owns the reward record. `zeph-token` is a SEPARATE program (value) —
# economy deliberately does not depend on it (no account-chain state here).
[dependencies]
postcard = { version = "1", default-features = false, features = ["alloc"] }
zeph-reward = { workspace = true }
