[package]
name = "zeph-membership"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zeph-core.workspace = true
zeph-wire.workspace = true
zeph-transport.workspace = true
tokio.workspace = true
rand.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
