[package]
name = "zeph-noded"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "zeph"
path = "src/main.rs"

[dependencies]
zeph-core.workspace = true
zeph-crypto.workspace = true
zeph-transport.workspace = true
zeph-wire.workspace = true
zeph-membership.workspace = true
zeph-erasure.workspace = true
zeph-routing.workspace = true
zeph-store.workspace = true
zeph-obj.workspace = true
zeph-sql.workspace = true
zeph-events.workspace = true
postcard.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
axum.workspace = true
rand.workspace = true
hex.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
