[package]
name = "zeph-noded"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "zeph"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
zeph-core.workspace = true
zeph-crypto.workspace = true
zeph-transport.workspace = true
zeph-wire.workspace = true
zeph-membership.workspace = true
zeph-erasure.workspace = true
zeph-routing.workspace = true
zeph-dht.workspace = true
zeph-store.workspace = true
zeph-obj.workspace = true
zeph-sql.workspace = true
zeph-com.workspace = true
zeph-cheque.workspace = true
zeph-ledger.workspace = true
zeph-events.workspace = true
zeph-sched.workspace = true
zeph-cipher.workspace = true
futures.workspace = true
tokio-stream = "0.1"
postcard.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
axum.workspace = true
rand.workspace = true
hex.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# jemalloc as the global allocator: glibc malloc retains freed memory in its
# per-thread arenas (up to 8×ncpu) under the seed/hub's bursty serve+mint
# allocation churn, ballooning RSS to many GB of not-returned-to-OS memory (a
# seed node measured 8GB heap vs <1GB on identical-workload peers; confirmed a
# glibc-arena artifact, not a leak, by a MALLOC_ARENA_MAX=2 test that cut it
# ~13×). jemalloc returns memory aggressively and fragments far less, baking the
# fix into the binary so every node is immune regardless of env. Not MSVC/Windows.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
# jemalloc runtime control: the background purge thread must be started via
# mallctl at runtime — setting it in malloc_conf/the symbol does NOT reliably
# start the thread at early init (measured: symbol-only still climbed to 3GB;
# runtime enable holds ~550MB).
tikv-jemalloc-ctl = "0.6"

[dev-dependencies]
tempfile.workspace = true
async-trait.workspace = true
