[package]
name = "zeph-reward"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# The reward-valuation policy is a SEPARATE governed program (its own anchor, swappable). `#![no_std]`
# + alloc so the same crate compiles into the `economy-egress` program (wasm32) and native node/tests.
[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
# no_std blake3 — the codebase's canonical hash. Needed here (not just in the node) because the state
# hash must be computed INSIDE the pure function that verifiers re-run, exactly like every other field
# of the record.
blake3 = { version = "1", default-features = false }
