[package]
name = "zeph-sql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zeph-core.workspace = true
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
sqlite-vfs = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
async-trait.workspace = true
zeph-routing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
