[package]
name = "zeph-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zeph-core.workspace = true
zeph-erasure.workspace = true
blake3.workspace = true
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
postcard.workspace = true
