[package]
name = "zeph-testkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
zeph-core.workspace = true
zeph-crypto.workspace = true
zeph-transport.workspace = true
zeph-routing.workspace = true
zeph-obj.workspace = true
zeph-sql.workspace = true
async-trait.workspace = true
