[package]
name = "zeph-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zeph-core.workspace = true
zeph-wire.workspace = true
iroh.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true

[dev-dependencies]
zeph-crypto.workspace = true
